tests/specs/run/permission_env_allow_and_deny/main.ts
console.log(Deno.env.toObject());
